<resources>
    <string name="app_name">Vaccination</string>
    <string name="text_full_name">Full name</string>
    <string name="text_gender">Gender</string>
    <string name="text_personal_id">Personal ID</string>
    <string name="text_email">Email</string>
    <string name="text_address">Address</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_other">Other</string>
    <string name="text_reenter_password">Reenter password</string>
    <string name="text_password">Password</string>
    <string name="text_set_password">Set your password</string>
    <string name="text_fill_in_profile">Fill in your basic information</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_submit">Submit</string>
    <string name="text_password_not_match">Password not match</string>
    <string name="text_missing_password">Please enter your password</string>
    <string name="text_missing_fields">Please fill in all fields</string>
    <string name="text_register_success">Thank you for submitting your contact information. Here is your QR code.</string>
    <string name="text_menu_home">Home</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_register">Register</string>
    <string name="text_username">Username</string>
    <string name="text_vaccination_calendar">Vaccination calendar</string>
    <string name="text_first_time">First time</string>
    <string name="text_second_time">Second time</string>
</resources>