<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        style="@style/TextView.Title"
        android:text="@string/text_set_password"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/edtPasswordConfirmation"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/text_reenter_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/tvPasswordValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextView.Error"
        app:layout_constraintTop_toBottomOf="@id/edtPasswordConfirmation" />

</androidx.constraintlayout.widget.ConstraintLayout>