<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView.Title"
            android:text="@string/text_fill_in_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_camera"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvImageValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgAvatar"
            style="@style/TextView.Error" />

        <EditText
            android:id="@+id/edtFullName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_full_name"
            android:hint="@string/text_full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvImageValidation" />

        <TextView
            android:id="@+id/tvFullNameValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtFullName"
            style="@style/TextView.Error" />

        <TextView
            android:id="@+id/tvBirthday"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            app:drawableStartCompat="@drawable/ic_birthday"
            app:layout_constraintEnd_toStartOf="@id/btnChooseBirthday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullNameValidation" />

        <TextView
            android:id="@+id/tvBirthdayValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvBirthday"
            style="@style/TextView.Error" />

        <ImageButton
            android:id="@+id/btnChooseBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_pick_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBirthday"
            app:layout_constraintTop_toTopOf="@id/tvBirthday" />

        <TextView
            android:id="@+id/tvGender"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_gender"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBirthdayValidation" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_phone_number"
            android:orientation="horizontal"
            android:paddingStart="14dp"
            android:paddingTop="8dp"
            android:paddingEnd="14dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/tvGender">

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/text_male" />

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_female" />

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/text_other" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvGenderValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/radioGroupGender"
            style="@style/TextView.Error" />

        <EditText
            android:id="@+id/edtPersonalID"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_personal_id"
            android:hint="@string/text_personal_id"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvGenderValidation" />

        <TextView
            android:id="@+id/tvPersonalIDValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtPersonalID"
            style="@style/TextView.Error" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/text_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvPersonalIDValidation" />

        <TextView
            android:id="@+id/tvEmailValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtEmail"
            style="@style/TextView.Error" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_number"
            android:hint="@string/text_phone_number"
            android:inputType="phone"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvEmailValidation" />

        <TextView
            android:id="@+id/tvPhoneNumberValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber"
            style="@style/TextView.Error" />

        <EditText
            android:id="@+id/edtAddress"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_address"
            android:hint="@string/text_address"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberValidation" />

        <TextView
            android:id="@+id/tvAddressValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtAddress"
            style="@style/TextView.Error" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>