<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp">

    <com.owt_dn.owt_hackathon.views.HasTextChagedEditText
        android:id="@+id/edtUsername"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableStart="@drawable/ic_personal_id"
        android:hint="@string/text_username"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.owt_dn.owt_hackathon.views.HasTextChagedEditText
        android:id="@+id/edtPassword"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        style="@style/Button.Primary"
        android:text="@string/text_sign_in"
        android:drawableEnd="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>