<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/gray_retangle"
                    android:scaleType="centerCrop"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tvFullName"
                    style="@style/TextView.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    app:layout_constraintBottom_toTopOf="@id/tvBirthday"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgAvatar"
                    tools:ignore="UseCompatTextViewDrawableXml" />

                <TextView
                    android:id="@+id/tvBirthday"
                    style="@style/EditText.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/imgAvatar"
                    app:layout_constraintEnd_toStartOf="@id/tvGender"
                    app:layout_constraintBottom_toBottomOf="@id/imgAvatar"
                    app:drawableStartCompat="@drawable/ic_birthday" />

                <TextView
                    android:id="@+id/tvGender"
                    style="@style/EditText.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/imgAvatar" />

                <TextView
                    android:id="@+id/tvPersonalID"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_personal_id"
                    app:layout_constraintTop_toBottomOf="@id/imgAvatar" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_email"
                    app:layout_constraintTop_toBottomOf="@id/tvPersonalID" />

                <TextView
                    android:id="@+id/tvEmailValidation"
                    style="@style/TextView.Error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tvEmail" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_phone_number"
                    app:layout_constraintTop_toBottomOf="@id/tvEmailValidation" />

                <TextView
                    android:id="@+id/tvAddress"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_address"
                    app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="14dp">

                <ImageView
                    android:id="@+id/imgQrCode"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_margin="8dp"
            android:id="@+id/blockVaccinationCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="14dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextView.Title"
                    android:text="@string/text_vaccination_calendar" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/text_first_time"
                        android:layout_weight="1"
                        style="@style/EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvFirstTime"
                        android:layout_weight="2"
                        style="@style/EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/text_second_time"
                        android:layout_weight="1"
                        style="@style/EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvSecondTime"
                        android:layout_weight="2"
                        style="@style/EditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>